[package]
name = "webhook-server"
version = "0.1.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
bytes = "0.5"
env_logger = "0.7"
futures-core = "0.3"
futures-util = "0.3"
hex = "0.4"
hmac = "0.9"
http = "0.2"
http-body = "0.3"
hyper = "0.13"
listenfd = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
sha-1 = "0.9"
tokio = { version = "0.2", features = ["io-util", "macros", "process", "rt-core", "signal", "stream", "tcp", "time", "uds"] }
toml = "0.5"
tower-service = "0.3"
