[package]
name = "webhook-server"
version = "0.1.0"
authors = ["Daiki Mizukami <tesaguriguma@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
env_logger = "0.8"
futures-util = "0.3"
hex = "0.4"
hmac = "0.10"
http = "0.2"
http-body = "0.4.1"
hyper = { version = "0.14", features = ["http1", "server"] }
listenfd = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
sha-1 = "0.9"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.5"
tower-service = "0.3"
